src/widgets/header/ui/header-navigation/header-navigation.module.scss
.nav {
    display: flex;
    align-items: center;
    gap: 4px;

    position: relative;

    &._active {
        z-index: 100;
    }
}

.nav_item {
    height: 44px;
    padding: 4px 20px;
    border-radius: 100px;

    @include setFontPublicSans500(16px, 1.25, -0.02em, getColorBlack());

    display: flex;
    align-items: center;
    gap: 6px;

    svg {
        width: 12px;
        height: 12px;
        stroke: #5d636f;
    }

    &._active {
        background: #f9f9f9;
        svg {
            transform: scaleY(-1);
        }
    }
}

.menu {
    width: auto;
    min-width: 200px;
    position: absolute;
    left: 50%;
    top: 100%;
    transform: translate(-50%, 20px);

    padding: 12px;
    padding-left: 20px;
    border-radius: 20px;
    background: #ffffff;
    background: getColorStrictWhite();

    display: block;

    &::before {
        content: "";
        display: block;
        left: 0;
        bottom: 100%;
        height: 20px;
        width: 100%;
        position: absolute;
        background: transparent;
        opacity: 0;
    }
}

.menu_content {
    display: flex;
    gap: 12px;
}

.menu_content_column {
    display: flex;
    flex-direction: column;
    gap: 22px;
    width: 170px;
    flex-shrink: 0;

    &:last-child {
        width: 100%;
    }
}


.menu_content_link,
.accordion,
.accordion_sublink {
    display: flex;
    align-items: center;
    gap: 14px;

    @include setFontPublicSans500(16px, 1.25, -0.02em, getColorBlack());

    img {
        width: 36px;
        height: 36px;
        border-radius: 8px;
    }

    svg {
        margin-left: -10px;
        width: 18px;
        flex-shrink: 0;
        stroke: getColorPink();
    }
}

.menu_content_comingSoon{
    height: 27px;
    border-radius: 100px;
    background: getColorPink();
    @include setFontClashGrotest500(12px, 1.255, -0.02em, #FFF);
    padding: 2px 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    white-space: nowrap;
}

.menu_content_link {
}

.accordion_root {
    width: 100%;
}

.accordion {
    margin-bottom: 2px;
    width: 100%;
    svg {
        width: 14px;
        height: 14px;
        stroke: getColorBlack();
    }
}

.accordion_content {
    padding-top: 20px;
    padding-left: 50px;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.accordion_sublink {
    align-items: flex-start;
    flex-direction: column;
    gap: 0;
}

.accordion_sublink_inner {
    display: flex;
    align-items: center;
    gap: 4px;

    svg {
        margin-left: 0;
    }
}

.accordion_sublink_desc {
    @include setFontPublicSans400(12px, 1.25, 0.01em, #444A55);
}

.enter {
    opacity: 0;
    transform: translate(-50%, -10px);
}
.enterActive {
    transform: translate(-50%, 20px);
    opacity: 1;
    transition: 300ms ease;
    transition-property: opacity, transform;
}
.exit {
    transform: translate(-50%, 20px);
    opacity: 1;
}
.exitActive {
    transform: translate(-50%, 50px);
    opacity: 0;
    transition: 300ms ease;
    transition-property: opacity, transform;
}

